# PocketBike

./: README.md
Controller/: README.md
Controller/Controller-Firmware/: README.md  platformio.ini  upload.sh
Controller/Controller-Firmware/src/: config.h  gps.hpp  main.cpp  vesc.hpp
Display/: README.md
Display/display_infrastructure/docker/mosquitto/: .gitignore  docker-compose.yaml
Display/display_infrastructure/docker/mosquitto/mosquitto/config/: mosquitto.conf
Display/lvgl_cmake_linux_fb/: CMakeLists.txt
Display/lvgl_cmake_linux_fb/src/: main.cpp
Display/lvgl_pb_display/: .gitignore  CMakeLists.txt  README.md  compile_upload.sh  cross_compile.sh  sim.sh  toolchain_armhf.cmake  toolchain_rpi.cmake
Display/lvgl_pb_display/src/: config.h  config_secret.h.sample  dash.hpp  lv_conf.h  lv_drv_conf.h  main.cpp  mock_pb_ui.cpp  mock_pb_ui.h  mqtt.hpp  rpiGpio.h  serialPort.hpp  util.h  vesc.h
Display/lvgl_pb_display/src/widgets/: gauge.h  graph.h  numericalValue.h  vertical_bar.h  widget.h
